--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html class="h-full" lang="en">
   <head>
     <meta charset="UTF-8" />
+
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#327f94" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta name="theme-color" content="#ffffff" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mening oshxonam dasturi</title>
+
+    <!-- Title  -->
+    <title>Mening retseptim dasturi</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body class="flex h-full flex-col">
+    <div class="flex h-full flex-col" id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
