--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Title  -->
     <title>Mening retseptim dasturi</title>
   </head>
-  <body class="flex h-full flex-col">
+  <body class="flex h-full flex-col font-body">
     <div class="flex h-full flex-col" id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
