Completed log with styles

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
     <!-- Title  -->
     <title>Mening retseptim dasturi</title>
   </head>
-  <body class="font-roboto flex h-full flex-col">
+  <body class="flex h-full flex-col font-roboto">
     <div class="flex h-full flex-col" id="root"></div>
+
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
